2-environments/1-development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gce-ingress-maliev-development
  namespace: maliev-dev
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: maliev-www-ip
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  # - hosts:
  #   - dev.www.maliev.com
  #   secretName: dev-www-maliev-com-tls
  - hosts:
    - dev.api.maliev.com
    secretName: dev-api-maliev-com-tls
  # - hosts:
  #   - dev.intranet.maliev.com
  #   secretName: dev-intranet-maliev-com-tls
  # - hosts:
  #   - dev.line-chatbot.maliev.com
  #   secretName: dev-line-chatbot-maliev-com-tls
  rules:
  # - host: dev.www.maliev.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-web
  #           port:
  #             number: 8080
  - host: dev.api.maliev.com
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: maliev-auth-service
            port:
              number: 8080
  #     - path: /countries
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-country-service
  #           port:
  #             number: 8080
  #     - path: /currencies
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-currency-service
  #           port:
  #             number: 8080
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: maliev-customer-service
            port:
              number: 8080
  #     - path: /emails
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-email-service
  #           port:
  #             number: 8080
      - path: /employees
        pathType: Prefix
        backend:
          service:
            name: maliev-employee-service
            port:
              number: 8080
  #     - path: /invoices
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-invoice-service
  #           port:
  #             number: 8080
  #     - path: /jobs
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-job-service
  #           port:
  #             number: 8080
  #     - path: /logs
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-log-service
  #           port:
  #             number: 8080
  #     - path: /materials
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-material-service
  #           port:
  #             number: 8080
  #     - path: /messages
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-message-service
  #           port:
  #             number: 8080
  #     - path: /orders
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-order-service
  #           port:
  #             number: 8080
  #     - path: /orderstatuses
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-orderstatus-service
  #           port:
  #             number: 8080
  #     - path: /payments
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-payment-service
  #           port:
  #             number: 8080
  #     - path: /pdfs
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-pdf-service
  #           port:
  #             number: 8080
  #     - path: /predictions
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-prediction-service
  #           port:
  #             number: 8080
  #     - path: /purchaseorders
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-purchaseorder-service
  #           port:
  #             number: 8080
  #     - path: /quotationrequests
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-quotationrequest-service
  #           port:
  #             number: 8080
  #     - path: /quotations
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-quotation-service
  #           port:
  #             number: 8080
  #     - path: /receipts
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-receipt-service
  #           port:
  #             number: 8080
  #     - path: /suppliers
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-supplier-service
  #           port:
  #             number: 8080
  #     - path: /uploads
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-upload-service
  #           port:
  #             number: 8080
  # - host: dev.intranet.maliev.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-intranet
  #           port:
  #             number: 8080
  # - host: dev.maliev.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-web
  #           port:
  #             number: 8080
  # - host: dev.line-chatbot.maliev.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: maliev-line-chatbot-service
  #           port:
  #             number: 80
